--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
             <span>$49</span>
           </div>
           <div class="type-section">
+            <div id="placeholder">
             <p class="placeholder">Type a message</p>
+            </div>
+            <div class="send">
+              <i class="fas fa-chevron-circle-right"></i>
+            </div>
             <!-- chevron -->
           </div>
           </div>
