--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </p>
             </div>
           </div>
-          <div class="chat">
+          <div class="chat last">
             <p class="chat__text">She looks so happy. The time we discussed works. How long shall I take her out for?.</p>
           </div>
           <div class="chat--violet">
